# mmd-reg

./: LICENSE  README.md  benchmark.py  benchmark_cpu_pcpnet.sh  benchmark_gpu_pcpnet.sh  benchmark_utilities.py  dataset_without_overlap_masks.py  losses_and_metrics.py  mmd_unweighted.py  mmd_weighted.py  prepare_kitti_odometry.sh  prepare_modelnet40.sh  prepare_pcpnet.sh  prepare_wild_places.sh  process_kitti_odometry.py  process_pcpnet.py  process_wild_places.py  pyproject.toml  test_modelnet40_clean.py  test_modelnet40_partial.py  train_modelnet40_clean.py  train_modelnet40_partial.py  tune_modelnet40_partial.py
data_preprocessing/: process_modelnet40.py  process_pcpnet.py  process_wild_places.py
experiments/: benchmark.py  benchmark_utilities.py  test_modelnet40_clean.py  test_modelnet40_partial.py  test_supervised.py  test_unsupervised.py  train_modelnet40_clean.py  train_modelnet40_partial.py  train_supervised.py  train_unsupervised.py  tune_modelnet40_partial.py  tune_supervised.py
neural_mmd_reg/: dataset_with_overlap_masks.py  set_transformer.py
preprocessing/: process_kitti_odometry.py  process_modelnet40.py  process_pcpnet.py  process_wild_places.py
scripts/: benchmark_cpu_pcpnet.sh  benchmark_gpu_kitti_odometry.sh  benchmark_gpu_pcpnet.sh  benchmark_gpu_wild_places.sh  prepare_kitti_odometry.sh  prepare_modelnet40.sh  prepare_pcpnet.sh  prepare_wild_places.sh  test_supervised.sh  test_unsupervised_gaussian.sh  test_unsupervised_laplace.sh  train_supervised.sh  train_unsupervised_gaussian.sh  train_unsupervised_laplace.sh  tune_supervised.sh
