[project]
name = "mmd-reg"
version = "1.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch",
    "torchvision",
    "flax",
    "h5py",
    "jaxopt",
    "matplotlib",
    "open3d",
    "optax",
    "pandas",
    "probreg",
    "tqdm",
    "jax==0.8.2; sys_platform == 'darwin'",
    "jax[cuda12]==0.8.2; sys_platform == 'linux'",
]

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
